--- a/css/3inc_custom.css
+++ b/css/3inc_custom.css
@@ -143,6 +143,14 @@ a>.col-sm-10{
 }
 
 /* ---------------------------------
+	h1-h6
+---------------------------------- */
+.top-title{
+	margin-top: 150px;
+}
+
+
+/* ---------------------------------
 	img
 ---------------------------------- */
 
@@ -206,4 +214,20 @@ a>.col-sm-10{
 
 #footer .col-md-12{
 	padding-top: 100px;
+}
+
+/* ---------------------------------
+	colors
+---------------------------------- */
+
+.c-iij{
+	color: #cc0033 !important;
+}
+
+.c-3inc{
+	color: #1e2b7f !important;
+}
+
+.c-3inc-sub{
+	color:#0c6fb2 !important;
 }
